--- a/empoweredconvofrontend/public/index.html
+++ b/empoweredconvofrontend/public/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145388884-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145388884-1');
+</script>
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.jpg" />
     <link
       rel="stylesheet"
